--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: auto;
+  margin: 0 auto;
+  padding: 16px;
+  align-items: center;
+  justify-content: start;
 }
