--- a/src/index.css
+++ b/src/index.css
@@ -6,37 +6,85 @@
   color: #000;
 }
 
-.App {
+header {
   display: flex;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-  padding: 16px;
+  justify-content: space-between;
+  padding: 1%;
+  width: 98%;
+  max-width: 80vw;
 }
 
-.layout {
+h1.title {
+  font-size: 2.2rem;
+  line-height: 3rem;
+  font-weight: 500;
+  width: 50%;
+}
+
+.navbar {
   display: flex;
+  justify-content: end;
+  width: 50%;
+}
+
+ul.nav-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+ul.nav-menu li {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: none;
+  font-size: 1.2rem;
   width: auto;
-  height: 2rem;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 8px;
-  background-color: mediumblue;
-  font-size: 1.5rem;
-  color: #fff;
 }
 
-.layout a {
-  color: #fff;
-  margin-left: 2rem;
+@media Screen and (width: 580px) {
+  h1.title {
+    font-size: 1.5rem;
+    line-height: 3rem;
+    font-weight: 500;
+    width: 30%;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: center;
+    width: 70%;
+  }
+}
+
+.nav-menu a {
+  color: #000;
+  margin-left: 1rem;
   text-decoration: none;
 }
 
-.home {
-  background-color: red;
-  font-size: 2rem;
-  margin-top: 100px;
+.page {
+  margin-top: 2%;
+  max-width: 80vw;
+  padding: 16px;
+}
+
+.calc-page {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+
+.page-title {
+  margin-bottom: 2%;
+  background: none;
+  font-size: 1.2rem;
+  color: #000;
+}
+
+.home-intro {
+  font-size: 12px;
+  color: #000;
 }
 
 ul {
@@ -48,9 +96,8 @@ ul {
 .main-rows {
   display: flex;
   flex-direction: column;
-  margin: 10%  auto 0 auto;
-  padding: 0;
-  width: 33.33%;
+  margin: 0 auto;
+  width: 100%;
   border: none;
 }
 
@@ -113,12 +160,13 @@ ul {
   text-align: right;
 }
 
-p {
-  background-color: green;
-}
-
 .quote {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
-  margin: 10%  auto 0 auto;
-  width: 33.33%;
+  height: 60vh;
+  width: 80vw;
+  text-align: center;
 }
